[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["HLudmann <hugo.ludmann@imt-atlantique.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["yaml"] }
lazy_static = "*"
regex = "*"
